tests/grammar/snapshots/r#mod__grammar__alpha034__expr_precedence-7.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"2 / 3 + 1\").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        Add(
                            (
                                Divide(
                                    (
                                        Number(
                                            (
                                                2.0,
                                                0..1,
                                            ),
                                        ),
                                        0..1,
                                    ),
                                    (
                                        Number(
                                            (
                                                3.0,
                                                4..5,
                                            ),
                                        ),
                                        4..5,
                                    ),
                                ),
                                0..5,
                            ),
                            (
                                Number(
                                    (
                                        1.0,
                                        8..9,
                                    ),
                                ),
                                8..9,
                            ),
                        ),
                        0..9,
                    ),
                ),
                0..9,
            ),
        ],
    ),
    0..9,
)
