tests/grammar/snapshots/r#mod__grammar__alpha034__expr_precedence-9.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"\n            2 + 5 > 3 + 4\n                then 15 + 10\n                else 5 - 4 <= 1/2\n                    then 3 * 4\n                    else 2\").unwrap()"
---
Statement(
    [
        Expression(
            Ternary(
                Gt(
                    Add(
                        Number(
                            2.0,
                        ),
                        Number(
                            5.0,
                        ),
                    ),
                    Add(
                        Number(
                            3.0,
                        ),
                        Number(
                            4.0,
                        ),
                    ),
                ),
                Add(
                    Number(
                        15.0,
                    ),
                    Number(
                        10.0,
                    ),
                ),
                Ternary(
                    Le(
                        Subtract(
                            Number(
                                5.0,
                            ),
                            Number(
                                4.0,
                            ),
                        ),
                        Divide(
                            Number(
                                1.0,
                            ),
                            Number(
                                2.0,
                            ),
                        ),
                    ),
                    Multiply(
                        Number(
                            3.0,
                        ),
                        Number(
                            4.0,
                        ),
                    ),
                    Number(
                        2.0,
                    ),
                ),
            ),
        ),
    ],
)
