tests/grammar/snapshots/r#mod__grammar__alpha034__failure_handlers-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"$$ failed {}\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Expression(
                    Command(
                        (),
                        [],
                        (),
                        Some(
                            Handle(
                                (),
                                Block(
                                    (),
                                    [],
                                    (),
                                ),
                            ),
                        ),
                    ),
                ),
                None,
            ),
        ),
    ],
)
