tests/grammar/snapshots/r#mod__grammar__alpha034__failure_handlers-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"foo()?\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Expression(
                    FunctionInvocation(
                        Variable(
                            "foo",
                        ),
                        (),
                        [],
                        (),
                        Some(
                            Propagate(
                                (),
                            ),
                        ),
                    ),
                ),
                None,
            ),
        ),
    ],
)
