tests/grammar/snapshots/r#mod__grammar__alpha034__failure_handlers-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(\"foo() failed {}\")"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        FunctionInvocation(
                            (
                                "foo",
                                0..3,
                            ),
                            [],
                            Some(
                                (
                                    Handle(
                                        [],
                                    ),
                                    6..15,
                                ),
                            ),
                        ),
                        0..15,
                    ),
                ),
                0..15,
            ),
        ),
        0..15,
    ),
]
