tests/grammar/snapshots/r#mod__grammar__alpha034__failure_handlers.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"$$?\").unwrap()"
---
Statement(
    [
        Expression(
            Command(
                [],
                Some(
                    Propagate,
                ),
            ),
        ),
    ],
)
