tests/grammar/snapshots/r#mod__grammar__alpha034__function_def-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"fun func(a) {}\").unwrap()"
---
(
    FunctionDefinition(
        (
            "func",
            4..8,
        ),
        [
            (
                Generic(
                    (
                        "a",
                        9..10,
                    ),
                ),
                9..10,
            ),
        ],
        None,
        [],
    ),
    0..14,
)
